--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,16 +56,27 @@ android {
     }
 }
 
-
+repositories {
+    mavenCentral()
+}
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile project(':pulltorefresh')
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.facebook.android:facebook-android-sdk:4.7.0'
-        compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.1@aar') {
-            transitive = true
-        }
+    compile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.1@aar') {
+        transitive = true
+    }
+
+    compile ('com.mapbox.mapboxsdk:mapbox-android-geocoder:1.0.0@aar'){
+        transitive=true
+    }
+
+    compile ('com.mapbox.mapboxsdk:mapbox-android-geocoder:1.0.0@aar'){
+        transitive=true
+    }
+
 //    compile('com.mapbox.mapboxsdk:mapbox-android-sdk:5.0.2@aar') {
 //        transitive = true
 //    }
