--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,24 @@
     <!-- 允许程序访问CellID或WiFi热点来获取粗略的位置 -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.CALL_PHONE" />
+
+    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+
+    <uses-permission android:name=
+
+                             "android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+
+    <uses-permission android:name=
+
+                             "android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
+
     <application
             android:name=".AnyTimeApplication"
             android:allowBackup="true"
@@ -297,10 +315,30 @@
         </activity>
         <activity android:name=".MapActivity">
         </activity>
-        <activity android:name=".VideoPickerActivity">
-        </activity>
-        <activity android:name=".GeocodingActivity">
-        </activity>
+        <receiver android:name=".PhoneBroadcastReceiver">
+            <intent-filter android:priority="1000">
+                <action android:name="android.intent.action.NEW_OUTGOING_CALL"/>
+                <action android:name="android.intent.action.PHONE_STATE"/>
+            </intent-filter>
+        </receiver>
+
+        <receiver android:name="BootBroadcastReceiver">
+
+            <intent-filter>
+
+                <action android:name=
+
+                                "android.provider.Telephony.SMS_RECEIVED"/>
+
+            </intent-filter>
+
+        </receiver>
+
+        <!--<service android:name="PhoneListenerService" />-->
+        <!--<activity android:name=".VideoPickerActivity">-->
+        <!--</activity>-->
+        <!--<activity android:name=".GeocodingActivity">-->
+        <!--</activity>-->
     </application>
 
 </manifest>
